--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "latest",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
+    "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
