--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@types/uuid": "^9.0.7",
     "axios": "^1.6.1",
     "next": "latest",
     "react": "latest",
