--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "latest",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
