--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@reduxjs/toolkit": "^2.2.1",
     "@types/uuid": "^9.0.7",
     "axios": "^1.6.1",
     "next": "latest",
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^9.1.0",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
